replaced java.net.URL to URI